<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchFragment">

    <data>

        <variable
            name="searchViewModel"
            type="com.sostrovsky.travelup.ui.ticket.TicketViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtDestinationFrom"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:ems="10"
            android:hint="@string/hint_departure_from"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtFlyingTo"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:ems="10"
            android:hint="@string/hint_departure_to"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDestinationFrom" />

        <EditText
            android:id="@+id/edtDepartureDate"
            style="@style/InputFieldStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/departure_date"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFlyingTo"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{searchViewModel.searchButtonVisible}"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDepartureDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>