<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/AppInitFragment">

    <fragment
        android:id="@+id/AppInitFragment"
        android:name="com.sostrovsky.travelup.ui.app_init.AppInitFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_app_init">
        <action
            android:id="@+id/action_AppInitFragment_to_TicketSearchFragment"
            app:destination="@id/TicketSearchFragment"
            app:popUpTo="@id/AppInitFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/TicketSearchFragment"
        android:name="com.sostrovsky.travelup.ui.ticket.TicketSearchFragment"
        android:label="@string/search_ticket"
        tools:layout="@layout/fragment_ticket_search">
        <action
            android:id="@+id/action_TicketSearchFragment_to_TicketSearchResultFragment"
            app:destination="@id/TicketSearchResultFragment" />
        <action
            android:id="@+id/action_TicketSearchFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/TicketSearchResultFragment"
        android:name="com.sostrovsky.travelup.ui.ticket.TicketSearchResultFragment"
        android:label="@string/search_result"
        tools:layout="@layout/fragment_ticket_search_result">
        <action
            android:id="@+id/action_TicketSearchResultFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_TicketSearchResultFragment_to_TicketSearchFragment"
            app:destination="@id/TicketSearchFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.sostrovsky.travelup.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_TicketSearchResultFragment"
            app:destination="@id/TicketSearchResultFragment" />
        <action
            android:id="@+id/action_SettingsFragment_to_TicketSearchFragment"
            app:destination="@id/TicketSearchFragment" />
    </fragment>

</navigation>