<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="settingsViewModel"
            type="com.sostrovsky.travelup.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setParamsBlock"
            style="@style/InputBlockStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/indent_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lblLanguage"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                style="@style/DataFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lblLanguage"
                app:layout_constraintTop_toBottomOf="@+id/lblLanguage" />

            <TextView
                android:id="@+id/lblCurrency"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage" />

            <Spinner
                android:id="@+id/spinnerCurrency"
                style="@style/DataFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lblCurrency"
                app:layout_constraintTop_toBottomOf="@+id/lblCurrency" />

            <TextView
                android:id="@+id/lblCountry"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_country_region"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency" />

            <Spinner
                android:id="@+id/spinnerCountry"
                style="@style/DataFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lblCountry"
                app:layout_constraintTop_toBottomOf="@+id/lblCountry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{settingsViewModel.saveButtonVisible}"
            android:onClick="@{() -> settingsViewModel.saveSettings()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setParamsBlock" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>